; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_iba7220.c_qib_7220_set_intr_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_iba7220.c_qib_7220_set_intr_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qib_devdata = type { i32 }

@QIB_BADINTR = common dso_local global i32 0, align 4
@kr_intmask = common dso_local global i32 0, align 4
@kr_intclear = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.qib_devdata*, i64)* @qib_7220_set_intr_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qib_7220_set_intr_state(%struct.qib_devdata* %0, i64 %1) #0 {
  %3 = alloca %struct.qib_devdata*, align 8
  %4 = alloca i64, align 8
  store %struct.qib_devdata* %0, %struct.qib_devdata** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %22

7:                                                ; preds = %2
  %8 = load %struct.qib_devdata*, %struct.qib_devdata** %3, align 8
  %9 = getelementptr inbounds %struct.qib_devdata, %struct.qib_devdata* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @QIB_BADINTR, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %7
  br label %26

15:                                               ; preds = %7
  %16 = load %struct.qib_devdata*, %struct.qib_devdata** %3, align 8
  %17 = load i32, i32* @kr_intmask, align 4
  %18 = call i32 @qib_write_kreg(%struct.qib_devdata* %16, i32 %17, i64 -1)
  %19 = load %struct.qib_devdata*, %struct.qib_devdata** %3, align 8
  %20 = load i32, i32* @kr_intclear, align 4
  %21 = call i32 @qib_write_kreg(%struct.qib_devdata* %19, i32 %20, i64 0)
  br label %26

22:                                               ; preds = %2
  %23 = load %struct.qib_devdata*, %struct.qib_devdata** %3, align 8
  %24 = load i32, i32* @kr_intmask, align 4
  %25 = call i32 @qib_write_kreg(%struct.qib_devdata* %23, i32 %24, i64 0)
  br label %26

26:                                               ; preds = %14, %22, %15
  ret void
}

declare dso_local i32 @qib_write_kreg(%struct.qib_devdata*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
